<resources>
    <string name="form_type">Multi Language Form</string>
    <string name="app_name">Daberdev Porto</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="region">regions</string>
    <string-array name="regions">
        <item>West Boreno</item>
        <item>North Boreno</item>
        <item>South Boreno</item>
        <item>West Java</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>