<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MultiLanguage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        >

        <TextView
            android:text="@string/form_type"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            />
        
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/username"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/password"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:hint="@string/region"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:id="@+id/dropdown"
                android:inputType="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
              />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

    </LinearLayout>

</FrameLayout>